# pydatadigitizer

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  INSTALL.txt  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  REQUIREMENTS.txt  configure.sh  linear.txt  manifest.in  pyproject.toml  readme.rst  requirements-dev.txt  requirements.txt  setup.py
conda.recipe/: conda_build_config.yaml  meta.yaml
datadigitizer/: __main__.py  gui.py  settings.py  tests.py  version.py
digitizer/: __main__.py  gui.py  settings.py  tests.py  version.py
doc/source/: conf.py
doc/source/api/: codedoc.rst
doc/source/getting_started/: introduction.rst
doc/source/releases/: changelog.rst  index.rst
docs/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/datadigitizer/: gui.html  settings.html  tests.html
docs/_sources/api/: index.rst.txt
docs/_sources/getting_started/: index.rst.txt
docs/_sources/introduction/: introduction.rst.txt
docs/_sources/releases/: 1.0.0-changelog.rst.txt  1.0.0-notes.rst.txt  1.0.1-changelog.rst.txt
docs/_static/: documentation_options.js
docs/api/: codedoc.html  index.html
docs/autodoc/: codedoc.html  index.html
docs/getting_started/: index.html  introduction.html
docs/html/: .buildinfo  genindex.html  objects.inv  search.html  searchindex.js
docs/introduction/: index.html  introduction.html
docs/releases/: 1.0.0-changelog.html  1.0.0-notes.html  1.0.1-changelog.html  1.0.1-notes.html  1.0.2-changelog.html  1.0.2-notes.html  1.1.0-changelog.html  1.1.0-notes.html  1.1.1-changelog.html  1.1.1-notes.html  1.1.2-changelog.html  1.1.2-notes.html  1.2.0-changelog.html  1.2.0-notes.html  1.2.1-notes.html  1.2.2-notes.html  changelog.html  index.html  template.html
docs/source/: conf.py
docs/tutorials/: index.html  tutorial.html
docs/user_guide/: index.html  tutorial.html
sphinx/source/: conf.py
src/datadigitizer/: __init__.py  version.py
(+31 files in other folders)
